# rover-2015

./: .gitignore  .gitmodules  11-rover-udev.rules  README.md  hci.sh  imu_rosbag_stationary.bag  install_dependencies  raw_gps_outsideMEDN.bag  raw_imu_insideMEDN.bag  topics
Arduino/: CMakeLists.txt  MasterBDC.ino  README.md
Arduino/ArmRos/: ArmController.cpp  ArmController.h  CMakeLists.txt  main.cpp
Arduino/BDC_SPI/: BDC_SPI.ino
Arduino/GPSReader/: GPSReader.ino
Arduino/High_Frequency_PWM/: High_Frequency_PWM.ino
Arduino/LidarTable/: CMakeLists.txt  LidarTable.cpp  LidarTable.h  main.cpp
Arduino/LidarTableServo/: CMakeLists.txt  LidarTableServo.cpp  LidarTableServo.h  main.cpp
Arduino/Model.xcdatamodeld/Model.xcdatamodel/: contents
Arduino/OTS_Drive/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  DataControl.cpp  DataControl.h  DriveControl.cpp  DriveControl.h  OTS_Drive.cpp  OTS_Drive.ino  SteeringControl.cpp  SteeringControl.h  pins.h
Arduino/RS485/: CMakeLists.txt  README.md  Rs485Test.c  Rs485Test.h  helper.h
Arduino/RS485/ArmControllerSlave/: ArmControllerSlave.ino
Arduino/RS485/BatteryControllerSlave/: BatteryControllerSlave.ino
Arduino/RS485/C code/: CMakeLists.txt  FunctionPointers.c  FunctionPointers.h  Rs485Test.c  Rs485Test.h  helper.c  helper.h
Arduino/RS485/DriveTestSlave/: DriveTestSlave.ino
Arduino/RS485/EndEffectorsSlave/: EndEffectorsSlave.ino
Arduino/RS485/Master/: Master.ino
Arduino/RS485/MasterSlave arduino/: DriveTestSlave.ino  Master.ino
Arduino/RS485/RosMaster/: RosMaster.ino  dSPIN_commands.ino  dSPIN_support.ino  gps_lib.ino  master_lib.ino  motor.h  motor.ino  setupStepperScience.ino
Arduino/RS485/ServoControllerSlave/: ServoControllerSlave.ino
Arduino/calibrateMegaServo/: CMakeLists.txt  calibrateMegaServo.cpp
Arduino/calibrateMegaServo_2/: calibrateMegaServo_2.ino
Arduino/cmake/: ArduinoToolchain.cmake
Arduino/deprecated/Adafruit_INA219/: Adafruit_INA219.cpp
Arduino/deprecated/BDC-control/: BDC-control.ino
Arduino/deprecated/BDC_SPI/: BDC_SPI.ino
Arduino/deprecated/High_Frequency_PWM/: High_Frequency_PWM.ino
Arduino/deprecated/MasterBDC/: MasterBDC.ino
Arduino/deprecated/SPI/: SPI.ino
Arduino/deprecated/motorControllerPWM/: Window.ui  parse.ino
Arduino/extremities_board/: extremities_board.ino
Arduino/gps/: gps.ino
Arduino/motorControllerPWM/: Window.py  Window.ui  motorControllGUI.py  motorControllerPWM.ino  parse.ino  register.h  register.ino
Arduino/test_code/: README.md
Arduino/test_code/espi/: espi.ino
Arduino/test_code/extermities_board_old/: extremities_board.ino
Arduino/test_code/lib_brushed/: lib_brushed.ino
Arduino/test_code/stepper/: stepper.ino
(+352 files in other folders)
